<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tutti Frescuni</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Inicio</string>
    <string name="txt_tutti_frescuni">Tutti Frescuni</string>
    <string name="txt_slogan">Fruta y verdura de temporada</string>
    <string name="title_activity_frutas">Frutas</string>
    <string name="title_activity_verduras">Verduras</string>    
    <string name="button_fruits">Frutas</string>
    <string name="button_vegetables">Verduras</string>
    <string name="txt_welcome">Difruta del mejor sabor y precio en</string>
    <string name="txt_season"></string>
    <string name="txt_spring">Primavera</string>
    <string name="txt_summer">Verano</string>
    <string name="txt_fall">Otoño</string>
    <string name="txt_winter">Invierno</string>
    <string name="txt_photo">Photo</string>

</resources>