<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


        <TextView
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_tutti_frescuni"
            android:textSize="@dimen/dim_title"
            android:typeface="serif"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="47dp"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_slogan"
            android:textStyle="italic"
            android:typeface="sans"
            android:textColor="#008108"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/editText"/>
    <Button
            android:layout_width="161dp"
            android:layout_height="40dp"
            android:text="@string/button_fruits"
            android:id="@+id/button_fruits"
            android:layout_alignParentTop="true"
            android:layout_marginTop="206dp" android:layout_alignLeft="@+id/textView"
            android:layout_alignRight="@+id/textView" android:background="@android:color/holo_orange_light"
            android:textColor="#ffffff"
            android:clickable="false"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/button_vegetables"
            android:id="@+id/button_vegetables"
            android:layout_centerHorizontal="true" android:layout_below="@+id/iv_fruit"
            android:layout_alignLeft="@+id/textView" android:layout_alignRight="@+id/textView"
            android:layout_marginTop="20dp" android:background="@android:color/holo_red_light"
            android:textColor="#ffffff"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_welcome"
            android:id="@+id/tv_welcome"
            android:textColor="#ffffff"
            android:layout_alignRight="@+id/editText"
            android:layout_alignParentTop="true"
            android:layout_marginTop="132dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_season"
            android:id="@+id/tv_season"
            android:textStyle="bold" android:textColor="#ffffff"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tv_welcome"/>
    <ImageView
            android:layout_width="52dp"
            android:layout_height="79dp"
            android:id="@+id/iv_fruit"
            android:src="@drawable/icon_fruit"
            android:contentDescription="@string/txt_photo"
            android:layout_alignRight="@+id/editText"
            android:layout_centerVertical="true"/>
    <ImageView
            android:layout_width="52dp"
            android:layout_height="57dp"
            android:id="@+id/iv_vegetable"
            android:src="@drawable/icon_vegetable"
            android:contentDescription="@string/txt_photo"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignBottom="@+id/button_vegetables"/>


</RelativeLayout>

