<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

    <TextView
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_tutti_frescuni"
            android:textSize="@dimen/dim_title"
            android:typeface="serif"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_alignParentLeft="false"
            android:layout_alignParentTop="true"
            android:layout_marginTop="12dp" android:layout_centerHorizontal="true"/>

    <TextView 
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_slogan"
            android:textStyle="italic"
            android:typeface="sans"
            android:textColor="@android:color/holo_green_dark"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/editText"/>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_welcome"
            android:id="@+id/tv_welcome"
            android:textColor="#ffffff"
            android:layout_alignRight="@+id/editText"
            android:layout_alignParentTop="true"
            android:layout_marginTop="78dp" android:layout_centerHorizontal="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_season"
            android:id="@+id/tv_season"
            android:textStyle="bold" android:textColor="#ffffff"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tv_welcome"/>
    
    <ListView
            android:id="@+id/listViewProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_season"
            android:layout_marginTop="20dp" android:layout_centerHorizontal="true"
            android:divider="@android:color/holo_orange_light" android:paddingLeft="50dp" android:paddingRight="50dp"
            android:dividerHeight="1dp" android:clickable="false" android:drawSelectorOnTop="false">
    </ListView>

</RelativeLayout>